Changes, no more play as button and fixed cropped images

--- a/css/default.css
+++ b/css/default.css
@@ -86,7 +86,6 @@
     .char-card img {
     max-width: 75%;
     height: auto;
-    border-radius: 50%;
     margin-bottom: 20px;
     }
     
